--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Palette de textures pour les carrelages -->
     <div id="texturePalette" class="texture-palette">
         <h3 style="color: white;">Textures</h3>
-        <input type="text" id="searchTile" placeholder="Rechercher un carrelage..." style="margin-bottom: 10px; padding: 5px; width: 90%; border-radius: 4px; border: 1px solid #ccc;">
+        <input type="text" id="searchTile" placeholder="Recherche" style="margin-bottom: 10px; padding: 5px; width: 90%; border-radius: 4px; border: 1px solid #ccc;">
         
         <img src="/images/CalacattaGold01_460x.webp" class="texture-option" alt="Calacatta Gold">
         <img src="/images/Cementine-Home-C2.jpg" class="texture-option" alt="Cementine Home">
