--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <input type="range" id="lightIntensity" min="0" max="2" step="0.1" value="0.5" class="slider">
             <button id="undoAction" class="btn">Annuler</button>
             <button id="redoAction" class="btn">Rétablir</button>
-            <button id="saveScene" class="btn">Sauvegarder</button>
+            <button id="saveScene" class="btn">Sauvegarder Scène</button>
+            <button id="saveImageButton" class="btn">Sauvegarder l'image</button>
             <button id="modeTranslate" class="btn">Déplacement</button>
             <button id="modeRotate" class="btn">Rotation</button>
         </div>
     </div>
 
-    <!-- Palette de textures pour les carrelages -->
     <div id="texturePalette" class="texture-palette">
         <h3 style="color: white;">Textures</h3>
         <input type="text" id="searchTile" placeholder="Recherche" style="margin-bottom: 10px; padding: 5px; width: 90%; border-radius: 4px; border: 1px solid #ccc;">
