--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <input type="text" id="searchTile" placeholder="Recherche" style="margin-bottom: 10px; padding: 5px; width: 90%; border-radius: 4px; border: 1px solid #ccc;">
         
         <img src="/images/CalacattaGold01_460x.webp" class="texture-option" alt="Calacatta Gold">
+        <img src="/images/1ANIKSA_PULIDO_120x260.jpg" class="texture-option" alt="aniksa pulido">
+        <img src="/images/1VESTIGE260X120_VESTIGE_PULIDO.jpg" class="texture-option" alt="vestige">
         <img src="/images/Cementine-Home-C2.jpg" class="texture-option" alt="Cementine Home">
         <img src="/images/d3d_default_0005362_12.jpg" class="texture-option" alt="Default Texture 1">
         <img src="/images/d3d_default_0088923_11.jpg" class="texture-option" alt="Default Texture 2">
